--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,2 @@
-spring.application.name=springboot
-spring.datasource.url=jdbc:postgresql://localhost:5432/products-api
-spring.datasource.username=postgres
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.show-sql=true
+# Default profile (optional)
+spring.profiles.active=postgres
